--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,6 @@
       url(/fonts/NationalWeb-ExtraboldItalic.woff) format("woff");
   }
   html, body {
-    @apply antialiased;
+    @apply antialiased text-gray-700;
   }
 }
