--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@
 	}
 
   html, body {
-    @apply font-sans;
+    @apply font-sans overflow-x-hidden;
   }
 	h1 {
 		@apply uppercase font-bold text-3xl md:text-4xl leading-8 md:leading-9;
