--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,19 +19,89 @@
 	}
 
   html, body {
-    @apply font-sans overflow-x-hidden;
+    @apply overflow-x-hidden font-sans;
   }
 	h1 {
-		@apply uppercase font-bold text-3xl md:text-4xl leading-8 md:leading-9;
+		@apply text-3xl font-bold uppercase md:text-4xl leading-8 md:leading-9;
 	}
 
-	.maplibregl-canvas-container canvas {
-		@apply focus:outline-none;
-	}
+  .maplibregl-canvas-container canvas {
+    @apply focus:outline-none;
+  }
 
-	.maplibregl-canvas-container {
-		@apply relative w-full h-full focus-within:outline-none focus-within:border-2 focus-within:border-red;
-	}
+  .maplibregl-canvas-container {
+    @apply relative w-full h-full focus-within:outline-none focus-within:border-2 focus-within:border-red;
+  }
+
+  /* Spiderifier  */
+  .spidered-marker {
+    width: 1px;
+    height: 1px;
+    overflow: display;
+    will-change: transform;
+  }
+
+  .spidered-marker:hover { cursor: pointer }
+
+  .spidered-marker .icon-div {
+    position: relative;
+    z-index: 1;
+  }
+
+  .spidered-marker .icon-div::before {
+    content: '';
+    @apply absolute z-10 border border-white rounded-full bg-red -translate-x-1/2 -translate-y-1/2;
+    width: 23px;
+    height: 23px;
+  }
+
+  .spidered-marker .line-div {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 2px;
+    background-color: #343434;
+    opacity: 0.45;
+    transform-origin: bottom;
+    z-index: 0;
+    height: 0;
+  }
+
+  .spidered-marker:hover .line-div { opacity: 1 }
+
+  /* Animations specific styles */
+
+  .spidered-marker.animate {
+    -webkit-transition: margin 0.15s linear;
+    -moz-transition: margin 0.15s linear;
+    -ms-transition: margin 0.15s linear;
+    -o-transition: margin 0.15s linear;
+    transition: margin 0.15s linear;
+  }
+
+  .spidered-marker.initial,
+  .spidered-marker.exit {
+    margin-left: 0 !important;
+    margin-top: 0 !important;
+    height: 0;
+  }
+
+  .spidered-marker.animate .line-div {
+    -webkit-transition: all 0.15s linear;
+    -moz-transition: all 0.15s linear;
+    -ms-transition: all 0.15s linear;
+    -o-transition: all 0.15s linear;
+    transition: all 0.15s linear;
+
+    -webkit-transition-delay: inherit;
+    -moz-transition-delay: inherit;
+    -ms-transition-delay: inherit;
+    -o-transition-delay: inherit;
+    transition-delay: inherit;
+  }
+
+  .spidered-marker.animate.initial .line-div,
+  .spidered-marker.animate.exit .line-div { height: 0 !important }
 }
 
 @layer utilities {
