chore(Map): Hide marker when spidered

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,9 @@
     will-change: transform;
   }
 
-  .spidered-marker:hover { cursor: pointer }
+  .spidered-marker:hover {
+    cursor: pointer;
+  }
 
   .spidered-marker .icon-div {
     position: relative;
@@ -50,58 +52,25 @@
 
   .spidered-marker .icon-div::before {
     content: '';
-    @apply absolute z-10 border border-white rounded-full bg-red -translate-x-1/2 -translate-y-1/2;
-    width: 23px;
-    height: 23px;
+    @apply absolute z-10 border border-white rounded-full bg-red -translate-x-1/2 -translate-y-1/2 transition-colors;
+    width: 22px;
+    height: 22px;
+  }
+
+  .spidered-marker:hover .icon-div::before {
+    @apply bg-gray-40;
   }
 
   .spidered-marker .line-div {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 2px;
+    width: 1.3px;
     background-color: #343434;
-    opacity: 0.45;
     transform-origin: bottom;
     z-index: 0;
     height: 0;
   }
-
-  .spidered-marker:hover .line-div { opacity: 1 }
-
-  /* Animations specific styles */
-
-  .spidered-marker.animate {
-    -webkit-transition: margin 0.15s linear;
-    -moz-transition: margin 0.15s linear;
-    -ms-transition: margin 0.15s linear;
-    -o-transition: margin 0.15s linear;
-    transition: margin 0.15s linear;
-  }
-
-  .spidered-marker.initial,
-  .spidered-marker.exit {
-    margin-left: 0 !important;
-    margin-top: 0 !important;
-    height: 0;
-  }
-
-  .spidered-marker.animate .line-div {
-    -webkit-transition: all 0.15s linear;
-    -moz-transition: all 0.15s linear;
-    -ms-transition: all 0.15s linear;
-    -o-transition: all 0.15s linear;
-    transition: all 0.15s linear;
-
-    -webkit-transition-delay: inherit;
-    -moz-transition-delay: inherit;
-    -ms-transition-delay: inherit;
-    -o-transition-delay: inherit;
-    transition-delay: inherit;
-  }
-
-  .spidered-marker.animate.initial .line-div,
-  .spidered-marker.animate.exit .line-div { height: 0 !important }
 }
 
 @layer utilities {
