--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,6 +57,10 @@
     height: 22px;
   }
 
+  .spidered-marker .icon-div.active::before {
+    @apply ring-2 ring-red ring-offset-2 ring-offset-white;
+  }
+
   .spidered-marker:hover .icon-div::before {
     @apply bg-gray-40;
   }
