--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,15 +4,22 @@
 
 @layer base {
 	@font-face {
-		font-family: 'AlbertSans';
-		src: url('/fonts/AlbertSans-VariableFont_wght.woff2?v=3.18') format('woff2-variations');
+		font-family: 'Domine';
+		src: url('/fonts/Domine-VariableFont_wght.ttf?v=3.18') format('truetype-variations');
+		font-weight: 100 900;
+		font-style: italic;
+		font-display: swap;
+	}
+	@font-face {
+		font-family: 'Nunito';
+		src: url('/fonts/Nunito-VariableFont_wght.ttf?v=3.18') format('truetype-variations');
 		font-weight: 100 900;
 		font-style: normal;
 		font-display: swap;
 	}
 	@font-face {
-		font-family: 'AlbertSans';
-		src: url('/fonts/AlbertSans-Italic-VariableFont_wght.woff2?v=3.18') format('woff2-variations');
+		font-family: 'Nunito';
+		src: url('/fonts/Nunito-Italic-VariableFont_wght.ttf?v=3.18') format('truetype-variations');
 		font-weight: 100 900;
 		font-style: italic;
 		font-display: swap;
