style(background): Change bg to be white again

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,7 +33,7 @@
 	}
 
   html, body {
-    @apply overflow-x-hidden font-sans;
+    @apply overflow-x-hidden font-sans bg-white;
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto;
